--- a/pratica_css.html
+++ b/pratica_css.html
@@ -2,38 +2,12 @@
 <html lang="en">
 
 <head>
+   <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Aula CSS</title>
-    <style>
-        .card {
-            background-color: violet;
-            width: 500px;
-            height: fit-content;
-            border-radius: 20px;
-            border: solid 5px black style;
-            width: 500px;
-            height: 200px;
-            margin-bottom: 20px;
-        }
 
-        .box {
-            width: 100px;
-            height: 100px;
-            background-image: url('https://cdn-icons-png.flaticon.com/512/706/706797.png');
-            background-size: cover;
-        }
-
-        .border-yellow {
-
-            border: solid 5px yellow
-        }
-
-        .main-color {
-            color: blue;
-        }
-    </style>
 </head>
 
 <body>
